--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/haters_point
 spring.datasource.username=root
-spring.datasource.password=Localhost@1234
+spring.datasource.password=loktak87
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 # Set max-active to 5, as a fix to "User already has more than 'max_user_connections' active connections"
