application.properties edited online with Bitbucket

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,4 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 # Set max-active to 5, as a fix to "User already has more than 'max_user_connections' active connections"
 spring.datasource.tomcat.max-active=5 
+server.port=5000
